--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -8,5 +8,6 @@ jobs:
             - uses: actions/setup-go@v4
               with:
                 go-version: 1.22.3
+            - run: sudo apt-get install libpcap-dev
             - run: go test
             - run: go build
