fix kafka container for github action

--- a/.github/workflows/kafka.yml
+++ b/.github/workflows/kafka.yml
@@ -4,6 +4,7 @@ on: push
 jobs:
   container-job:
     runs-on: ubuntu-latest
+    container: node:16-bullseye
     services:
       kafka:
         image: bitnami/kafka
