--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -4,7 +4,7 @@ jobs:
     test:
         runs-on: ubuntu-latest
         services:
-            kafka:
+            kafka-server:
               image: bitnami/kafka
               ports:
                   - 9092:9092
@@ -13,7 +13,7 @@ jobs:
                   KAFKA_CFG_PROCESS_ROLES: "controller,broker"
                   KAFKA_CFG_LISTENERS: "PLAINTEXT://:9092,CONTROLLER://:9093"
                   KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: "CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT"
-                  KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: "0@kafka:9093"
+                  KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: "0@kafka-server:9093"
                   KAFKA_CFG_CONTROLLER_LISTENER_NAMES: CONTROLLER
         steps:
             - uses: actions/checkout@v4
