--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -3,6 +3,8 @@ on: push
 jobs:
     test:
         runs-on: ubuntu-latest
+        container: node:10.18-jessie
+        
         services:
             kafka-server:
               image: bitnami/kafka
