fix kafka container for github action8

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -3,8 +3,8 @@ on: push
 jobs:
     test:
         runs-on: ubuntu-latest
-        container: node:10.18-jessie
-        
+        container: ubuntu-latest
+
         services:
             kafka-server:
               image: bitnami/kafka
