fix kafka container for github action9

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -3,7 +3,7 @@ on: push
 jobs:
     test:
         runs-on: ubuntu-latest
-        container: ubuntu-latest
+        container: node:latest
 
         services:
             kafka-server:
