--- a/kafka.env
+++ b/kafka.env
@@ -3,3 +3,7 @@ KAFKA_TOPIC=my-topic
 KAFKA_PARTITION=0
 KAFKA_TRANSPORT=tcp
 KAFKA_PORT=9094
+KAFKA_TLS_ENABLED=TRUE
+KAFKA_CLIENT_CERT="./bundle/client.cer.pem"
+KAFKA_CLIENT_KEY="./bundle/client.key.pem"
+KAFKA_SERVER_CERT="./bundle/server.cer.pem"
